# MCP

./: .gitignore  LICENSE  README.md
adaptive_rag_mcp/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  PROJECT_EXPLAINED.md  README.md  docker-compose.yml  evaluation_report.json  pyproject.toml  test_remote_access.py  test_report.txt
adaptive_rag_mcp/data/: chunks.db  hybrid_test_chunks.db  test_chunks.db
adaptive_rag_mcp/data/bm25_index/: bm25_data.json
adaptive_rag_mcp/data/faiss_index/: id_map.json  index.faiss
adaptive_rag_mcp/data/hybrid_test_bm25/: bm25_data.json
adaptive_rag_mcp/data/hybrid_test_faiss/: id_map.json  index.faiss
adaptive_rag_mcp/data/test_faiss/: id_map.json  index.faiss
adaptive_rag_mcp/docs/: execution_traces.md  integration.md
adaptive_rag_mcp/examples/: chatbot.py  generate_traces.py  sample_document.md  test_hybrid.py  test_retrieval.py  test_server.py
adaptive_rag_mcp/scripts/: evaluate_system.py  reproduce_issue.py  run_eval.py  run_evaluation.py  verify_generation.py  verify_loop.py  verify_policy.py  verify_rag_with_pdf.py
adaptive_rag_mcp/sdk/: client.py
adaptive_rag_mcp/src/: __init__.py  config.py  exceptions.py
adaptive_rag_mcp/src/evaluation/: evaluator.py
adaptive_rag_mcp/src/ingestion/: __init__.py  chunker.py  loaders.py  pipeline.py  storage.py
adaptive_rag_mcp/src/policy/: __init__.py  engine.py  tool_discovery.py
adaptive_rag_mcp/src/retrieval/: __init__.py  adaptive_memory.py  embedder.py  epistemic_safety.py  evidence_scoring.py  graph_controller.py  hybrid.py  iterative_controller.py  pipeline.py  reranker.py  sparse_retriever.py  task_planner.py  vector_store.py
adaptive_rag_mcp/src/server/: auth.py  context.py  llm.py  logging.py  loop.py  main.py  middleware.py  policy.py  schemas.py
adaptive_rag_mcp/src/server/tools/: __init__.py  executor.py  generation_tools.py  ingestion_tools.py  loop_tools.py  mock_implementations.py  policy_tools.py  rerank_tools.py  retrieval_tools.py
adaptive_rag_mcp/tests/: conftest.py  test_adaptive_logic.py  test_adaptive_memory.py  test_comprehensive_http.py  test_graph_controller.py  test_task_planner.py  test_tool_discovery.py
adaptive_rag_mcp/tests/examples/: test_ingestion.py  test_rerank.py
adaptive_rag_mcp/tests/fixtures/: evaluation.xml
test chatbot/: README.md  chatbot.py  generate_sample_pdf.py  generate_stress_test_pdfs.py  input.txt  pyproject.toml  sample_knowledge.txt
test chatbot/scripts/: debug_server.py  generate_sample_pdf.py  verify_search.py
test chatbot/src/: main.py
