[project]
name = "adaptive-rag-mcp"
version = "0.1.0"
description = "Production-grade Adaptive RAG MCP Server"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.20.0",
    "structlog>=24.1.0",
    # Phase 2: Document ingestion
    "pypdf>=4.0.0",
    "markdown>=3.5.0",
    # Phase 3: Dense retrieval
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
    # Phase 4: Sparse retrieval
    "rank-bm25>=0.2.0",
    # Phase 8: Generation
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
